test/visibility/import/public/no-imm-import.good
no-imm-import.chpl:2: syntax error: 'import' statements must refer to module symbols
